# accept-encoding

./: Cargo.toml  README.md  accept_encoding.lua  ex1.lua  ex2.lua
benches/: encoding.rs  my_benchmark.rs
examples/: encoding.rs
src/: byte_slice.rs  c.rs  encoding_matcher.rs  encoding_matcher2.rs  finder.rs  lexer.rs  lexer2.rs  lib.rs  mime_type_matcher.rs  monolith_lexer.rs  q_value.rs
