[package]
name = "accept_encoding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type   = ["rlib", "cdylib"]

[dependencies]

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "encoding"
harness = false

[profile.bench]
debug = true

[profile.release]
debug = true
lto = true
codegen-units = 1

[package.metadata.deb]
maintainer = "Hiroaki Nakamura <hnakamur@gmail.com>"
copyright = "2023, Hiroaki Nakamura <hnakamur@gmail.com>"
license-file = ["LICENSE"]
extended-description = """\
A library for matching HTP accept-encoding header values \
and accept header values."""
depends = "$auto"
section = "web"
priority = "optional"
assets = [
    ["target/release/deps/libaccept_encoding.so", "usr/lib/x86_64-linux-gnu/", "644"],
    ["accept_encoding.lua", "usr/share/luajit-2.1.0-beta3/", "644"],
]
